[gd_scene load_steps=7 format=2]

[ext_resource path="res://suspension.gd" type="Script" id=1]
[ext_resource path="res://ArcadeVehicle.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]

[sub_resource type="BoxMesh" id=1]

[sub_resource type="BoxShape3D" id=2]

[sub_resource type="CylinderMesh" id=3]

[node name="ArcadeMotorcycle" type="RigidBody3D"]
mass = 20.0
linear_damp = 0.2
angular_damp = 0.99
script = ExtResource( 2 )
VEHICLE_TYPE = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( 0.292047, 0, 0, 0, 0.222408, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 0.292, 0, 0, 0, 0.222, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="FrontLeft" type="RayCast3D" parent="."]
transform = Transform3D( 0.5, 0, 0, 0, 1, 0, 0, 0, 1, 0.176197, 0, 0.788491 )
enabled = true
script = ExtResource( 1 )

[node name="FrontRight" type="RayCast3D" parent="."]
transform = Transform3D( 0.5, 0, 0, 0, 1, 0, 0, 0, 1, -0.177495, 0, 0.788491 )
enabled = true
script = ExtResource( 1 )

[node name="Wheel" type="MeshInstance3D" parent="FrontRight"]
transform = Transform3D( -9.40727e-08, -0.0610132, 0, 0.236368, -4.06912e-09, 0, 0, 0, 0.218192, 0.318786, -0.652876, -0.0151303 )
mesh = SubResource( 3 )
material/0 = null

[node name="RearRight" type="RayCast3D" parent="."]
transform = Transform3D( 0.5, 0, 0, 0, 1, 0, 0, 0, 1, -0.177495, 0, -0.774569 )
enabled = true
script = ExtResource( 1 )

[node name="Wheel" type="MeshInstance3D" parent="RearRight"]
transform = Transform3D( -9.40727e-08, -0.0610132, 0, 0.236368, -4.06912e-09, 0, 0, 0, 0.218192, 0.318786, -0.652876, -0.00815272 )
mesh = SubResource( 3 )
material/0 = null

[node name="RearLeft" type="RayCast3D" parent="."]
transform = Transform3D( 0.5, 0, 0, 0, 1, 0, 0, 0, 1, 0.179848, 0, -0.774569 )
enabled = true
script = ExtResource( 1 )

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource( 3 )
